all changes done

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 ----------------------------------------------------------------
 # Normalize
 # FlexBox Grid System
-# Boilerplate Styles
+# Boilerplate Styles add
 
 # Main Layout
 # Shortcodes
